namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cardioai
  labels:
    app.kubernetes.io/name: cardioai
